tests/unit/default/syntax-error/040-create-table-parens-name-colon-type-params-null-eq-true.x.t
---- IN ----
+%table(id:decimal(10,2)?=true|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...0,2)?=true` near `|` at position 30 - at line 1
---- EXIT ----
1
